# aiocsv

./: .clang-format  .gitignore  .travis.disabled.yml  .travis.yml  LICENSE  aiocsv.py  dev_requirements.txt  license.md  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
aiocsv/: __init__.py  _parser.c  _parser.pyi  _parser.pyx  parser.py  protocols.py  readers.py  writers.py
tests/: eu_cities_unix.csv  math_constants.csv  metro_systems.tsv  newlines.csv  test_dialects.py  test_dict.py  test_newlines.py  test_parser.py  test_simple.py
