[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiocsv"
readme = "readme.md"
requires-python = ">=3.8"
dynamic = ["version"]
authors = [
    {name = "Mikołaj Kuranowski", email = "mkuranowski+pypackages@gmail.com"},
]
keywords = ["async", "asynchronous", "csv", "tsv"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/MKuranowski/aiocsv"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = true, exclude = ["tests", "tests.*"]}

[tool.setuptools.package-data]
aiocsv = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "aiocsv.__version__"}
